--- a/style.scss
+++ b/style.scss
@@ -113,24 +113,26 @@ body {
             // technical skills icon grid layout
             .icon-grid {
                 display: inline-grid;
-                border-radius: 14px;
                 grid-template-columns: 1fr 1fr 1fr;
                 gap: 0.2rem;
                 padding: 0.4rem;
                 background-color: $secondary-color;
+                // container for eaach grid item - image + caption
                 &__container{
+                    border-radius: 8px;
                     flex-flow: column wrap;
                     justify-content: space-between;
                     max-height: 10rem;
                     border: 3px solid black;
                 }
-                
+                // icon image
                     &__icon {
                         display: block;
                         width: 100%;
                         height: 65%;
                         background-color: $secondary-color;
                     }
+                    // icon caption
                     &__caption {
                         border-radius: 3px;
                         border: 1px solid black;
@@ -231,14 +233,19 @@ body {
         text-align: center;
         }
         &__navigation-menu {
+            width: 10rem;
             display: flex;
             flex-direction: row;
+            align-items: center;
             justify-content: space-evenly;
             .footer__link {
-                padding: 1rem;
+                background-color: $tertiary-color;
+                border-radius: 5px;
+                padding: 0.05rem;
                 display: block;
                 .footer__icon {
                     width: 2rem;
+                    background-color: $secondary-color;
                 }
             }
         }
@@ -326,7 +333,6 @@ body {
         .icon-grid {
             padding: 2rem;
             border: 2px solid $secondary-color;
-            border-radius: 15%;
             background-color: $primary-color;
             display: inline-grid;
             grid-template-rows: 1fr;
@@ -355,6 +361,7 @@ body {
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr;
             .card {
+                border-radius: 10px;
                 background-color: $secondary-color;
                 display: flex;
                 flex-direction: column;
@@ -362,6 +369,7 @@ body {
                 align-items: center;
                 padding: 2rem;
                 .card__image-container {
+                    border-radius: 8px;
                     background-color: $tertiary-color;
                     width: 80%;
                     padding: 1rem;
@@ -448,6 +456,9 @@ body {
 @media screen and (min-width: 1440px) {
 * {
     font-size: 20px;
+    }
+    .navigation-menu__link {
+        font-size: 1.7rem;
     }
     .header__greeting-text, .header__text-highlight {
         @include header-large;
